Fix rating display for easier alignment

--- a/src/components/rating/rating.scss
+++ b/src/components/rating/rating.scss
@@ -12,7 +12,7 @@
   --symbol-size: 1.2rem;
   --symbol-spacing: var(--sl-spacing-xxx-small);
 
-  display: inline-block;
+  display: inline-flex;
 }
 
 .rating {
